fix wrap

--- a/src/dictionary/result/index.less
+++ b/src/dictionary/result/index.less
@@ -37,7 +37,10 @@ page {
 }
 .zt-img {
   padding: 0 21rpx 0 16rpx;
+  flex-wrap: wrap;
   .zti {
     flex: 0 0 25%;
+    text-align: center;
+    margin-bottom: 20rpx;
   }
 }
